gcc/testsuite/gdc.test/runnable/imports/link2500b.d
module imports.link2500b;

struct S(T)
{
    void foo() {}
}
