gcc/testsuite/gdc.test/fail_compilation/fail7234.d

struct Contract {
    void opDispatch()(){}
}

void foo()
{
    Contract* r; if (r.empty) {}
}

